[tool.ruff]
target-version = "py310"
extend-exclude = [
    "*/migrations/*.py",
    "venv",
    "docs",
    "__pycache__",
    "build",
    "dist",
    ".tox",
    "tests/"
]

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ASYNC", "S",
    "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ",
    "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20",
    "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID",
    "TC", "INT", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY",
    "PERF", "RUF"
]
ignore = [
    "S101",  # Use of assert detected
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "SIM102",  # Sometimes it's better to nest
    "UP038",   # Checks for isinstance/issubclass with tuple of types
    "S113",
    "G004",
    "S105",
    "EM101",
    "TRY003",
    "EM102",
    "COM812",
    "BLE001",
    "A005"
]
extend-unsafe-fixes = [
    "UP038"
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = [
    "migrations",
    "tests",
    "test_lib_project",
    "docs",
    "venv",
    "__pycache__",
    ".tox",
    "build",
    "dist"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "drf_oauth_toolkit.settings"
pythonpath = "."
testpaths = ["tests"]

[tool.poetry]
name = "drf-oauth-toolkit"
version = "0.1.3"
description = "A toolkit for handling OAuth with Django Rest Framework"
authors = ["Basel Mahmoud <basel.mahmoud@arkleap.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework-simplejwt = "^5.4.0"
pyjwt = "^2.10.1"
django = "^5.1.4"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
attrs = "^24.3.0"
oauthlib = "^3.2.2"
types-requests = "^2.32.0.20241016"
cryptography = "^44.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-mock = "^3.14.0"
mypy = "^1.14.1"
pre-commit = "^4.0.1"
setuptools = "^75.8.0"
tox = "^4.23.2"
pytest-cov = "^6.0.0"
model-bakery = "^1.20.1"
sphinx = "^8.1.3"
sphinx-autobuild = "^2024.10.3"
sphinx-rtd-theme = "^3.0.2"
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
